<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Yellow_star"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Bhargavi"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black">


    </TextView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:srcCompat="@android:drawable/btn_star_big_on"
        android:contentDescription="@string/star"/>
    <EditText
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_border"
        android:hint="@string/what"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:inputType="textPersonName"
        android:layout_marginTop="8dp"
        ></EditText>
    <Button
        android:id="@+id/Done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textStyle="bold"
        android:textSize="20sp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp">

    </Button>

    <TextView
        android:id="@+id/text_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black">
    </TextView>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/Bio_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Bio"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:lineSpacingMultiplier="2"/>
    </ScrollView>


</LinearLayout>
    </layout>